introduction writing and updated reference list

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -309,3 +309,13 @@
     note = {R package version 15.0.1},
     url = {https://CRAN.R-project.org/package=arrow},
   }
+  
+@article{Ohrnberger_Fichera_Sutton, 
+    title={The relationship between physical and mental health: A mediation analysis}, 
+    volume={195}, DOI={10.1016/j.socscimed.2017.11.008}, 
+    journal={Social Science &amp; Medicine}, 
+    author={Ohrnberger, Julius and Fichera, Eleonora and Sutton, Matt}, 
+    year={2017}, 
+    month={Dec}, 
+    pages={42–49}
+  } 
