--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,9 +1,9 @@
 ---
-title: "My title"
-subtitle: "My subtitle if needed"
+title: "Mental Health Plays Significant Role in Physical Wellness"
+subtitle: "Intersectionality and Mental Illness Being Overlooked in the Medical Field"
 author: 
   - Mingjia Chen
-thanks: "Code and data are available at: LINK."
+thanks: "Code and data are available at: https://github.com/MjChen120/Mental_to_Physical_Health.git."
 date: today
 date-format: long
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
@@ -43,17 +43,22 @@ mentalVsHealth <- read_parquet(here::here("data/analysis_data/mentalVsHealth_dat
 
 # Introduction {#sec-intro}
 
-This paper begins with [Introduction] framing the impact of mental health on one's well being. The [Data] section details variables, methodology, and cleaning processes used for analyses. In [Model] section, a model is proposed for determining how individual's depression status and counted days of mental unwellness in the past 30 days impacts their counted days of physical unwellness in the past 30 days. [Results] section analyzes how demographic and other mental health related factors would affect physical health with model calculations. 
+Mental health is one essential aspect of the general health of an individual and yet it is often overlooked in the past centuries. Mental illnesses are not only “silent diseases” of one’s mind, but could as well impact patients’ physical well-being in general [@Ohrnberger_Fichera_Sutton]. As browsing through relevant journal articles, a question arises: could mental health-related and demographic factors impact the number of days an individual experiences physical unwellness in a month?
 
-? Still need to fix this part
-[Discussion] section includes . We later acknowledge our paper's [Limitations], suggest paths for [Future Research], especially on enhancing response rates, and conclude with a synthesis of our insights. The [Appendix] provides further survey information.
+U.S. General Social Survey (GSS) data is used for this paper to examine whether the demographic and mental health-related factors as indicators of physical health conditions. The estimand is the difference in whether an individual could experience more occasions of feeling physically unwell if they have mental health unwellness versus not. This is considered in terms of those who were diagnosed as having depression by a doctor.
 
+The analysis of GSS data, including gender, age, and mental and physical health variables, seeks to provide detailed insights into how mental health issues impact physical unwellness, contributing to discussions on intersectionality and overlooked mental health in the medical field.
+
+<Results paragraph>
+
+This paper begins with [Introduction] framing the impact of mental health on one's well-being. The [Data] section details variables, methodology, and analysis cleaning processes. In the [Model] section, a model is proposed for determining how an individual's depression status and counted days of mental unwellness in the past 30 days impact their counted days of physical unwellness in the past 30 days. [Results] section analyzes how demographic and other mental health-related factors would affect physical health with model calculations, leading the [Discussion] section with gender intersectionality and mental health issues often being overlooked in the medical field. Limitations and Future Research sections are included for study limitations and future research directions. The [Appendix] provides further survey information.
 
 # Data {#sec-data}
 
-The paper uses data collected from the US General Social Survey (GSS) from NORIC at the University of Chicago [@GSS]. From the dataset, this paper focuses on the "number of hours worked last week" variable, from the years 1992 to 2022. This longitudinal approach allows us to compare labour dynamics across different economic downturns, including the 1998 Asian Financial Crisis, the 2008 Global Financial Crisis, and the COVID-19 pandemic in 2020.
+The paper uses data collected from the US General Social Survey (GSS) from NORIC at the University of Chicago [@GSS]. From the dataset, this paper focuses specifically on variables related to demographic backgrounds, mental health, and physical health, from 1992 to 2022. This longitudinal approach allows us to analyze whether an individual's demographic factors and mental health well-being could significantly contribute to their physical well-being.
 
 ## Source Data
+
 The data was downloaded and filtered for the selected variables from the selected data variables from GSS[^1]. The data cleaning was performed based on value definitions as defined in the GSS codebooks [@gssCodebook]. The variable names are renamed to be more informative (@tbl-use-var).
 
 
@@ -191,7 +196,7 @@ Here we briefly describe the Bayesian analysis model used to investigate... Back
 
 ## Model set-up
 
-Define $y_i$ as the number of seconds that the plane remained aloft. Then $\beta_i$ is the wing width and $\gamma_i$ is the wing length, both measured in millimeters.  
+Define $y_i$ as the number of days that an individual feel physically unwell in the past 30 days. Then $\beta_i$ is the number of days that this individual feel mentally unwell and $\gamma_i$ indicates whether the individual is diagnosed as depressive by a doctor. $y_i$ and $\beta_i$ are measured in days.  
 
 \begin{align} 
 y_i|\mu_i, \sigma &\sim \mbox{Normal}(\mu_i, \sigma) \\
@@ -206,10 +211,6 @@ We run the model in R [@citeR] using the `rstanarm` package of @rstanarm. We use
 
 
 ### Model justification
-
-We expect a positive relationship between the size of the wings and time spent aloft. In particular...
-
-We can use maths by including latex between dollar signs, for instance $\theta$.
 
 
 # Results {#sec-results}
